--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,25 @@
 @tailwind utilities;
 
 
+.arrow-right {
+  display: inline-block;
+  position: relative;
+  width: 100px;
+  height: 30px;
+  background-color: black;
+}
+
+.arrow-right:after {
+  content: '';
+  position: absolute;
+  top: -9px;
+  right: -30px;
+  width: 0;
+  height: 0;
+  border-top: 25px solid transparent;
+  border-bottom: 25px solid transparent;
+  border-left: 30px solid black;
+}
 :root {
   --color-primary: #BF885E;
   --color-primary-darker: #A6734B;
