--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,29 @@
 @tailwind utilities;
 
 
+.liveDemo{
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(17, 15, 15, 0.7);
+  opacity: 0;
+  transition: all 0.7s ease;
+}
+.links{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
+.hello:hover .liveDemo{
+ opacity: 4;
+}
+
+
+
 :root {
   --color-primary: #BF885E;
   --color-primary-darker: #A6734B;
