Superior Slider overlay design done

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,10 @@
 .carousel.carousel-slider .control-arrow {
   background-color: #823d03;
 }
+.carousel .control-dots {
+  display: none;
+}
+
 :root {
   --color-primary: #BF885E;
   --color-primary-darker: #A6734B;
