--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,18 @@
 .carousel .control-dots {
   display: none;
 }
+.slick-prev {
+	left: 3%;
+	z-index: 999;
+}
+.slick-next {
+	right: 3%;
+}
+
+.slick-prev:before, .slick-next:before {
+  font-size: 30px;
+  color: black;
+}
 
 :root {
   --color-primary: #BF885E;
