--- a/src/index.css
+++ b/src/index.css
@@ -31,17 +31,11 @@
 .carousel .control-dots {
   display: none;
 }
-.slick-prev {
-	left: 3%;
-	z-index: 999;
-}
-.slick-next {
-	right: 3%;
-}
 
-.slick-prev:before, .slick-next:before {
-  font-size: 30px;
-  color: black;
+
+.slick-prev::before,
+.slick-next::before {
+  content: none;
 }
 
 :root {
